# frustrum-engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE
benchmark/: CMakeLists.txt  test.cpp
cmake/: Dependencies.cmake  Doxygen.cmake  Module.cmake  export_header_content.hpp.in
cmake/ext/: RunGenerateTypeTraits.cmake.in  TypeTraits.cmake  TypeTraitsHeader.hpp.in  TypeTraitsTest.cpp.in  UpdateTypeTraits.cmake.in
cmake/toolchain/: msvc.cmake
cmake/utils/: Version.cmake
docs/: Modules.dox
engine/core/: CMakeLists.txt
engine/core/include/: application.hpp  core.hpp  debug.hpp  engine.hpp  frsdef.hpp  pimpl.hpp  threads.hpp  version.hpp  window.hpp  window_data.hpp
engine/core/include/debug/: assertions.hpp  level.hpp  logger.hpp  message.hpp
engine/core/include/inl/: pimpl.inl
engine/core/private_include/platform/win/: win_application.hpp  win_logger.hpp  win_window.hpp
engine/core/src/: application.cpp  engine.cpp  threads.cpp  window.cpp  window_data.cpp  window_data.hpp
engine/core/src/debug/: logger.cpp  message.cpp
engine/core/src/platform/win/: dllmain.cpp  win_application.cpp  win_logger.cpp  win_window.cpp
example/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
